unpackaged/main/default/objects/LoanApplicant/fields/ChangesExpectedNext3Years__c.field-meta.xml
<CustomField>
    <fullName>ChangesExpectedNext3Years__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you anticipate or plan on any changes in your life next 3 years</inlineHelpText>
    <label>Are changes expected in next 3 years?</label>
    <type>Checkbox</type>
</CustomField>