unpackaged/main/default/objects/LoanApplicant/fields/External_ID_LA__c.field-meta.xml
<CustomField>
    <fullName>External_ID_LA__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for UUID from Postgres to Salesforce via Heroku Connect</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for UUID from Postgres to Salesforce via Heroku Connect</inlineHelpText>
    <label>External_ID_LA</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>