unpackaged/main/default/objects/LoanApplicant/fields/OtherName__c.field-meta.xml
<CustomField>
    <fullName>OtherName__c</fullName>
    <label>OtherName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>