unpackaged/main/default/objects/LoanApplicant/listViews/All_LoanApplicants.listView-meta.xml
<ListView>
    <fullName>All_LoanApplicants</fullName>
    <filterScope>Everything</filterScope>
    <label>All Loan Applicants</label>
</ListView>